--- a/record_voice_android_app/app/build.gradle
+++ b/record_voice_android_app/app/build.gradle
@@ -2,13 +2,57 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+apply plugin: "androidx.navigation.safeargs.kotlin"
+
 android {
+    dataBinding {
+        enabled = true
+    }
+    packagingOptions {
+        exclude 'META-INF/atomicfu.kotlin_module'
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+}
+
+dependencies {
+
+    //Room
+    implementation "androidx.room:room-runtime:2.3.0-alpha02"
+    implementation "androidx.room:room-ktx:2.3.0-alpha02"
+    kapt "androidx.room:room-compiler:2.3.0-alpha02"
+    androidTestImplementation "androidx.room:room-testing:2.3.0-alpha02"
+
+    // Lifecycle
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    kapt "androidx.lifecycle:lifecycle-compiler:2.3.0-alpha07"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    //Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.0"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.0"
+    androidTestImplementation "androidx.navigation:navigation-testing:2.3.0"
+
+    //dataBinding
+    kapt 'com.android.databinding:compiler:3.2.0-alpha10'
+    kapt "com.android.databinding:compiler:3.1.4"
+
+    // Kotlin
+    implementation "androidx.fragment:fragment-ktx:1.3.0-alpha08"
+    debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
+    implementation "androidx.test:core:1.3.0"
+    implementation "androidx.fragment:fragment:1.3.0-alpha08"
+
+} android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
 
     defaultConfig {
-        applicationId "com.amebaownd.pikohan_nwiatori.recordvoiceapp"
-        minSdkVersion 28
+        applicationId "com.example.recordsoundandtext"
+        minSdkVersion 22
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -28,11 +72,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
