--- a/record_voice_android_app/app/src/main/AndroidManifest.xml
+++ b/record_voice_android_app/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.recordsoundandtext">
+    package="com.amebaownd.pikohan_niwatori.recordsoundandtext">
 
     <application
         android:allowBackup="true"
